<resources>
    <string name="app_name">Bluey</string>
    <string name="channel_name">Bluey Notification</string>
    <string name="channel_description">Bluey description</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start_stop_service_label">Start/Stop Service</string>"


    <!-- MQTT Preferences -->
    <string name="ble_scan_period_setting_title">BLE scan period (ms)</string>
    <string name="ble_cool_off_period_setting_title">Cool off period (ms)</string>
    <string name="mqtt_header">MQTT</string>
    <string name="MQTT_server_address_setting_title">MQTT Server Address</string>
    <string name="main_ble_settings_header">BLE</string>
    <string name="MQTT_username_setting_title">MQTT username</string>
    <string name="MQTT_password_setting_title">MQTT password</string>
    <string name="mqtt_device_name_setting_title">Device name</string>
    <string name="ble_filter_rssi_setting_title">Apple device RSSI minimum</string>
</resources>